navbar z-index gegeven

--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
         </section>
     </main>
 
-    <section>
-        <form action="https://docent.cmi.hr.nl/moora/frontend/send-mail.php" method="POST">
+    <section id="contactform">
+        <form action="https://docent.cmi.hr.nl/moora/frontend/send-mail.php" method="POST" >
             <div class="center-container">
-                    <h1>Contactformulier</h1>
+                    <h2>Contactformulier</h2>
                     
                     <div class="formfield">
                     <div class="subfield" id="firstname">
@@ -189,7 +189,7 @@
                 <a href="#">Privacyverklaring</a>
                 <a href="#">Algemene voorwaarden</a>
                 <a href="#">Cookiebeleid</a>
-                <a href="#">Contact</a>
+                <a href="#contactform">Contact</a>
             </div>
         </div>
 
