link fixes in navbar en footer en css fix nav img

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
 <body>
     <nav>
-        <img src="images/Logo.png">
-        <a href="#">Link</a>
-        <a href="#">Link</a>
-        <a href="#">Link</a>
-        <a href="#">Link</a>
-        <a href="#">Link</a>
+        <a href="#"><img src="images/Logo.png"></a>
+        <a target="_blank" href="https://darksouls3.wiki.fextralife.com/Dark+Souls+3+Wiki">Wiki</a>
+        <a href="https://store.steampowered.com/app/374320/DARK_SOULS_III/">Play</a>
+        <a href="#">Yhorm</a>
+        <a href="https://www.youtube.com/results?search_query=dark+souls+3">Youtube</a>
+        <a href="#contactform">Contact</a>
     </nav>
 
     <header>
