textjes veranderd en onnodige css verwijderd

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </nav>
 
     <header>
-        <div class="head-column">
+        <section class="head-column">
             <h1>Yhorm the Giant</h1>
             <p>Yhorm the Giant is a Lord of Cinder and Boss in Dark Souls 3. This Dark Souls 3 Yhorm the Giant Guide features locations, 
                 strategies and videos on how to defeat Yhorm the Giant easily, as well as tips, weaknesses, trivia and lore notes for the Yhorm the
@@ -31,13 +31,13 @@
             <button>
                 In-game info
             </button>
-        </div>
+        </section>
 
     </header>
 
     <main>
         <section>
-            <h2>Gerelateerde producten</h2>
+            <h2>Wapens voor de bossfight</h2>
             <div class="items-container">
 
                 <article>
@@ -57,7 +57,7 @@
                             </div>
                             <p>The wolf knight was the first Abyss Watcher, and his sword is more punishing against creations of the abyss. </p>
                         </div>
-                        <a href="#" class="button-default">Bekijk recept</a>
+                        <a href="#" class="button-default">Bekijk Wapen</a>
                     </div>
                 </article>
 
@@ -77,7 +77,7 @@
                         </div>
                         <p>Thickly imbued with the power of lightning. Use skill to draw upon the techniques used to slay the archdragons.</p>
                     </div>
-                    <a href="#" class="button-default">Bekijk recept</a>
+                    <a href="#" class="button-default">Bekijk Wapen</a>
                     </div>
                 </article>
 
@@ -97,7 +97,7 @@
                             </div>
                             <p>This weapon, said to belong to a traitor from long ago, was so heavy that it found no owner, and became a forgotten relic of history. </p>
                         </div>
-                        <a href="#" class="button-default">Bekijk recept</a>
+                        <a href="#" class="button-default">Bekijk Wapen</a>
                         </div>
                 </article>
 
